# redstone-design-automation

./: .gitignore  Cargo.toml  LICENSE  index.html
src/: main.rs
src/ui/: application.rs  bar.rs  canvas.rs  component_list.rs  connection_point.rs  console_option.rs  keybard_input_handler.rs  logic_gate.rs  logic_gates.rs  mod.rs  redstone_component.rs  toolbar.rs  workspace.rs
src/ui/canvas/: canvas.rs  element.rs  mod.rs  renderer.rs  svg_image.rs
src/ui/component_list/: component_list.rs  component_list_item.rs  mod.rs  redstone_component.rs
src/ui/components/: logic_gate.rs  mod.rs  pin.rs
src/ui/logic_gates/: and_gate.rs  mod.rs
src/ui/main_header/: header_menu.rs  header_option.rs  main_header.rs  menu_option.rs  mod.rs  submenu.rs
src/ui/workspace/: mod.rs  workarea.rs  workspace.rs
