[package]
name = "redstone-design-automation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version="0.20", features=["csr"]}
stylist = {version="0.12.0", features=["yew_integration", "yew_use_style"]}
yew_icons = {version="0.7.0", features=["lucide"]}
log = "0.4.6"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.83"
js-sys="*"
gloo="*"
dyn-clone="*"
dyn-clonable="*"

[dependencies.web-sys]
version = "*"
features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "Event", "EventTarget", "HtmlImageElement", "Window", "Blob"]
